--- a/lib/l10n/untranslated.json
+++ b/lib/l10n/untranslated.json
@@ -46,7 +46,7 @@
     "couldnt_create_private_message",
     "no_private_message_edit_allowed",
     "post_title_too_long",
-    "number_users_online",
+    "number_of_users_online",
     "number_of_comments",
     "number_of_posts",
     "number_of_subscribers",
@@ -163,7 +163,7 @@
     "report_too_long",
     "couldnt_create_report",
     "couldnt_resolve_report",
-    "number_users_online",
+    "number_of_users_online",
     "number_of_comments",
     "number_of_posts",
     "number_of_subscribers",
@@ -277,7 +277,7 @@
     "post_title_too_long",
     "email_already_exists",
     "user_already_exists",
-    "number_users_online",
+    "number_of_users_online",
     "number_of_comments",
     "number_of_posts",
     "number_of_subscribers",
@@ -385,7 +385,7 @@
     "post_title_too_long",
     "email_already_exists",
     "user_already_exists",
-    "number_users_online",
+    "number_of_users_online",
     "number_of_subscribers",
     "number_of_users",
     "unsubscribe",
@@ -506,7 +506,7 @@
     "post_title_too_long",
     "email_already_exists",
     "user_already_exists",
-    "number_users_online",
+    "number_of_users_online",
     "number_of_comments",
     "number_of_posts",
     "number_of_subscribers",
@@ -693,7 +693,7 @@
     "post_title_too_long",
     "email_already_exists",
     "user_already_exists",
-    "number_users_online",
+    "number_of_users_online",
     "number_of_comments",
     "number_of_posts",
     "number_of_subscribers",
@@ -840,7 +840,7 @@
     "post_title_too_long",
     "email_already_exists",
     "user_already_exists",
-    "number_users_online",
+    "number_of_users_online",
     "number_of_comments",
     "number_of_posts",
     "number_of_subscribers",
@@ -860,7 +860,7 @@
 
   "pl": [
     "not_a_mod_or_admin",
-    "number_users_online",
+    "number_of_users_online",
     "number_of_comments",
     "number_of_posts",
     "number_of_subscribers",
@@ -974,7 +974,7 @@
     "post_title_too_long",
     "email_already_exists",
     "user_already_exists",
-    "number_users_online",
+    "number_of_users_online",
     "number_of_comments",
     "number_of_posts",
     "number_of_subscribers",
@@ -1002,7 +1002,7 @@
 
   "ru": [
     "not_a_mod_or_admin",
-    "number_users_online",
+    "number_of_users_online",
     "number_of_comments",
     "number_of_posts",
     "number_of_subscribers",
@@ -1134,7 +1134,7 @@
     "post_title_too_long",
     "email_already_exists",
     "user_already_exists",
-    "number_users_online",
+    "number_of_users_online",
     "number_of_comments",
     "number_of_posts",
     "number_of_subscribers",
@@ -1240,7 +1240,7 @@
     "post_title_too_long",
     "email_already_exists",
     "user_already_exists",
-    "number_users_online",
+    "number_of_users_online",
     "number_of_comments",
     "number_of_posts",
     "number_of_subscribers",
@@ -1366,7 +1366,7 @@
     "post_title_too_long",
     "email_already_exists",
     "user_already_exists",
-    "number_users_online",
+    "number_of_users_online",
     "number_of_comments",
     "number_of_posts",
     "number_of_subscribers",
@@ -1418,7 +1418,7 @@
     "invalid_password",
     "captcha_incorrect",
     "bio_length_overflow",
-    "number_users_online",
+    "number_of_users_online",
     "number_of_comments",
     "number_of_posts",
     "number_of_subscribers",
