--- a/lib/l10n/intl_de.arb
+++ b/lib/l10n/intl_de.arb
@@ -101,7 +101,7 @@
   "post_title_too_long": "Posttitel zu lang.",
   "email_already_exists": "Email existiert bereits.",
   "user_already_exists": "Nutzer existiert bereits.",
-  "number_users_online": "{count,plural, =1{{count} Benutzer online} other{{count} Benutzer*innen online}}",
+  "number_of_users_online": "{count,plural, =1{{count} Benutzer online} other{{count} Benutzer*innen online}}",
   "number_of_comments": "{count,plural, =1{{count} Kommentar} other{{count} Kommentare}}",
   "number_of_posts": "{count,plural, =1{{count} Beitrag} other{{count} Beiträge}}",
   "number_of_subscribers": "{count,plural, =1{{count} Abonnent} other{{count} Abonnent*innen}}",
