--- a/lib/l10n/intl_hu.arb
+++ b/lib/l10n/intl_hu.arb
@@ -91,7 +91,7 @@
   "post_title_too_long": "A bejegyzés címe túl hosszú.",
   "email_already_exists": "Az email már létezik.",
   "user_already_exists": "A felhasználó már létezik.",
-  "number_users_online": "{count,plural, =1{{count} online felhasználó} other{{count} online felhasználó}}",
+  "number_of_users_online": "{count,plural, =1{{count} online felhasználó} other{{count} online felhasználó}}",
   "number_of_comments": "{count,plural, =1{{count} hozzászólás} other{{count} hozzászólás}}",
   "number_of_posts": "{count,plural, =1{{count} bejegyzés} other{{count} bejegyzés}}",
   "number_of_subscribers": "{count,plural, =1{{count} feliratkozó} other{{count} feliratkozó}}",
