--- a/lib/l10n/intl_ja.arb
+++ b/lib/l10n/intl_ja.arb
@@ -93,7 +93,7 @@
   "post_title_too_long": "投稿のタイトルが長すぎます。",
   "email_already_exists": "メールアドレスが既に使用されています。",
   "user_already_exists": "ユーザーは既に存在します。",
-  "number_users_online": "{count,plural, =1{{count} 名のユーザーがオンライン}}",
+  "number_of_users_online": "{count,plural, =1{{count} 名のユーザーがオンライン}}",
   "number_of_comments": "{count,plural, =1{{count} 件のコメント}}",
   "number_of_posts": "{count,plural, =1{{count} 件の投稿}}",
   "number_of_subscribers": "{count,plural, =1{{count} 名の登録者}}",
