--- a/lib/l10n/intl_ko.arb
+++ b/lib/l10n/intl_ko.arb
@@ -105,7 +105,7 @@
   "post_title_too_long": "게시물 제목이 너무 깁니다.",
   "email_already_exists": "이메일이 이미 존재합니다.",
   "user_already_exists": "사용자가 이미 존재합니다.",
-  "number_users_online": "{count,plural, =1{접속자수 {count}}}",
+  "number_of_users_online": "{count,plural, =1{접속자수 {count}}}",
   "number_of_comments": "{count,plural, =1{덧글수 {count}}}",
   "number_of_posts": "{count,plural, =1{게시물 수 {count}}}",
   "number_of_subscribers": "{count,plural, =1{구독자수{count}}}",
