--- a/lib/l10n/intl_nl.arb
+++ b/lib/l10n/intl_nl.arb
@@ -91,7 +91,7 @@
   "post_title_too_long": "Posttitel te lang.",
   "email_already_exists": "Email bestaat al.",
   "user_already_exists": "Gebruiker bestaat al.",
-  "number_users_online": "{count,plural, =1{{count} gebruiker online} other{{count} gebruikers online}}",
+  "number_of_users_online": "{count,plural, =1{{count} gebruiker online} other{{count} gebruikers online}}",
   "number_of_comments": "{count,plural, =1{{count} reactie} other{{count} reacties}}",
   "number_of_posts": "{count,plural, =1{{count} post} other{{count} posts}}",
   "number_of_subscribers": "{count,plural, =1{{count} abonnee} other{{count} abonnees}}",
