--- a/lib/l10n/intl_el.arb
+++ b/lib/l10n/intl_el.arb
@@ -120,5 +120,13 @@
   "old_password": "Παλιός κωδικός",
   "show_avatars": "Εμφάνιση των άβαταρς",
   "search": "Αναζήτηση",
-  "send_message": "Αποστολή μηνύματος"
+  "send_message": "Αποστολή μηνύματος",
+  "top_day": "Κορυφαία σήμερα",
+  "top_week": "Κορυφαία της εβδομάδας",
+  "top_month": "Κορυφαία του μήνα",
+  "top_year": "Κορυφαία φέτος",
+  "top_all": "Κορυφαία από πάντα",
+  "most_comments": "Περισσότερα σχόλια",
+  "new_comments": "Νέα σχόλια",
+  "active": "Δραστηριότητα"
 }
