--- a/lib/l10n/intl_fa.arb
+++ b/lib/l10n/intl_fa.arb
@@ -77,5 +77,6 @@
   "verify_password": "تایید گذرواژه",
   "old_password": "پسورد پیشین",
   "show_avatars": "نمایش آواتارها",
-  "search": "جستجو"
+  "search": "جستجو",
+  "top_day": "بهترین‌های روز"
 }
