--- a/lib/l10n/intl_ka.arb
+++ b/lib/l10n/intl_ka.arb
@@ -101,5 +101,6 @@
   "old_password": "ძველი პაროლი",
   "show_avatars": "ავატარები გამოჩენა",
   "search": "ძებმა",
-  "send_message": "მესეჯის გაგზავნა"
+  "send_message": "მესეჯის გაგზავნა",
+  "top_day": "ტოპ დღეს"
 }
