--- a/lib/l10n/intl_nl.arb
+++ b/lib/l10n/intl_nl.arb
@@ -106,5 +106,6 @@
   "old_password": "Oud wachtwoord",
   "show_avatars": "Toon avatars",
   "search": "Zoek",
-  "send_message": "Verstuur bericht"
+  "send_message": "Verstuur bericht",
+  "top_day": "Dagelijkse top"
 }
