--- a/lib/l10n/intl_ru.arb
+++ b/lib/l10n/intl_ru.arb
@@ -115,5 +115,11 @@
   "old_password": "Действующий пароль",
   "show_avatars": "Показывать аватары",
   "search": "Поиск",
-  "send_message": "Послать сообщение"
+  "send_message": "Послать сообщение",
+  "top_day": "Лучшее за день",
+  "top_week": "Лучшее за неделю",
+  "top_month": "Лучшее за месяц",
+  "top_year": "Лучшее за год",
+  "top_all": "Лучшее за все время",
+  "active": "Активное"
 }
