--- a/lib/l10n/intl_sq.arb
+++ b/lib/l10n/intl_sq.arb
@@ -106,5 +106,6 @@
   "old_password": "Fjalëkalimi i vjetër",
   "show_avatars": "Shfaq fotot e profilit",
   "search": "Kërko",
-  "send_message": "Dërgo Mesazh"
+  "send_message": "Dërgo Mesazh",
+  "top_day": "Më të pëlqyerat e ditës"
 }
