--- a/lib/l10n/intl_tr.arb
+++ b/lib/l10n/intl_tr.arb
@@ -106,5 +106,6 @@
   "old_password": "Eski şifre",
   "show_avatars": "Avatarları Göster",
   "search": "Ara",
-  "send_message": "Mesaj Yolla"
+  "send_message": "Mesaj Yolla",
+  "top_day": "Günün en iyileri"
 }
