--- a/lib/l10n/intl_uk.arb
+++ b/lib/l10n/intl_uk.arb
@@ -101,5 +101,6 @@
   "old_password": "Діючий пароль",
   "show_avatars": "Показувати аватари",
   "search": "Пошук",
-  "send_message": "Послати повідомлення"
+  "send_message": "Послати повідомлення",
+  "top_day": "Найкраще за день"
 }
